# fake-face-detection

./: .gitignore  Makefile  README.md  config.yaml  environment.yml  features_stats.py  make_dataset.py  params.yaml  pipline.yaml  pyproject.toml  requirements.txt
data/interim/: log.json
data/processed/real_and_fake_face_5/test/: features_10.npy  features_11.npy  log.json  (+3 more)
docs/: mkdocs.yml
docs/docs/: index.md
models/real_and_fake_face_5_10/: log.json  model_stats.csv
models/real_and_fake_face_5_10/knn/: 1_best_knn_model.pkl  1_knn_tuning_results.csv
models/real_and_fake_face_5_10/svm/: 1_best_svm_model.pkl  1_svm_tuning_results.csv
models/real_and_fake_face_5_11/: log.json  model_stats.csv
models/real_and_fake_face_5_11/knn/: 1_best_knn_model.pkl  1_knn_tuning_results.csv
models/real_and_fake_face_5_11/svm/: 1_best_svm_model.pkl  1_svm_tuning_results.csv
models/real_and_fake_face_5_12/: log.json  model_stats.csv
models/real_and_fake_face_5_12/knn/: 1_best_knn_model.pkl  1_knn_tuning_results.csv
models/real_and_fake_face_5_12/svm/: 1_best_svm_model.pkl  1_svm_tuning_results.csv
models/real_and_fake_face_5_9/: log.json  model_stats.csv
models/real_and_fake_face_5_9/knn/: 1_best_knn_model.pkl  1_knn_tuning_results.csv
models/real_and_fake_face_5_9/svm/: 1_best_svm_model.pkl  1_svm_tuning_results.csv
notebooks/: extract_feature_obs.ipynb  fft.ipynb  loop_save_processed_image.ipynb  modelling.ipynb  preprocess.ipynb  read_npy.ipynb
src/: evaluate.py  prepare.py  train.py
src/utils/: modeling_utils.py  operation_utils.py  preprocess_utils.py
(+6 files in other folders)
